Add current week menu API updates
